Bug 60378 - FILEOPEN DOC: Some right borders not displayed in table
Summary: FILEOPEN DOC: Some right borders not displayed in table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium minor
Assignee: Justin L
URL:
Whiteboard: BSA target:7.0.0
Keywords: filter:doc, needUITest
: 80094 86710 (view as bug list)
Depends on:
Blocks: DOC-Tables
  Show dependency treegraph
 
Reported: 2013-02-06 16:46 UTC by Mikhail Vladimirov
Modified: 2020-06-04 06:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Some part of official commercial document in Russian which was made in MS Office (97.50 KB, application/msword)
2013-02-06 16:46 UTC, Mikhail Vladimirov
Details
Screenshot LO 4.0rc3 vs Word for Mac 2011 (256.03 KB, image/png)
2013-02-06 20:46 UTC, Jorendc
Details
Problema-con-borders-652 simplified.doc: minimal table (44.00 KB, application/msword)
2020-04-20 12:12 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Vladimirov 2013-02-06 16:46:23 UTC
Created attachment 74294 [details]
Some part of official commercial document in Russian which was made in MS Office

Problem description: Wrong cells formatting in some tables of complicated documents

Steps to reproduce:
1. Open file in LO 3.6.5.2 and look how does it look
2. Open the same file in MS Office 2010 and see what it should be...
3. ....

Current behavior: Wrong cells formatting (some right borders are lost)

Expected behavior: As it should be

              
Operating System: Debian
Version: 3.6.5.2 release
Comment 1 Jorendc 2013-02-06 20:45:39 UTC
Thanks for reporting!

I can reproduce this behavior using LibreOffice 4.0.0.3 rc3 comparing to Word for Mac 2011; using Mac OSX 10.8.2.

Following [1] I mark this bug as 'Normal Medium'.

Kind regards,
Joren

[1] https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 2 Jorendc 2013-02-06 20:46:17 UTC
Created attachment 74304 [details]
Screenshot LO 4.0rc3 vs Word for Mac 2011
Comment 3 Xisco Faulí 2014-03-03 17:06:47 UTC Comment hidden (obsolete)
Comment 4 Joel Madero 2015-05-02 15:42:21 UTC Comment hidden (obsolete)
Comment 5 Buovjaga 2015-06-20 15:55:21 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 3ecef8cedb215e49237a11607197edc91639bfcd
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-19_23:16:58
Locale: fi-FI (fi_FI)
Comment 6 Mikhail Vladimirov 2015-10-22 11:40:24 UTC Comment hidden (obsolete)
Comment 7 Mikhail Vladimirov 2016-02-18 18:44:58 UTC Comment hidden (obsolete)
Comment 8 Mikhail Vladimirov 2016-03-03 12:22:12 UTC Comment hidden (obsolete)
Comment 9 Xisco Faulí 2017-10-03 14:11:41 UTC
Still reproducible in

Version: 6.0.0.0.alpha0+
Build ID: 34e8fd7e99489e9f50a512b07c6f3923b358b4d3
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

I remember seeing a similar bug in Bugzilla but I can't find it now...
Comment 10 Xisco Faulí 2017-10-03 15:02:24 UTC
*** Bug 80094 has been marked as a duplicate of this bug. ***
Comment 11 Mikhail Vladimirov 2017-11-06 18:47:10 UTC
The Bug Is Still Reproducible!

LibreOffice
Version: 5.4.2.2
Build ID: 1:5.4.2~rc2-0ubuntu0.16.04.1~lo2
CPU threads: 8; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 12 Timur 2018-07-31 15:15:20 UTC
*** Bug 86710 has been marked as a duplicate of this bug. ***
Comment 13 QA Administrators 2019-08-01 03:36:58 UTC Comment hidden (obsolete)
Comment 14 Mikhail Vladimirov 2019-08-01 16:43:10 UTC
LibreOffice ver. 6.2.5.2
Same thing as before
:-(
Comment 15 Justin L 2020-04-20 12:12:19 UTC
Created attachment 159759 [details]
Problema-con-borders-652 simplified.doc: minimal table
Comment 16 Justin L 2020-04-20 15:42:35 UTC
// #i18128# word has only one line between adjoining vertical cells
// we have to mimic this in the filter by picking the larger of the
// sides and using that one on one side of the line (right)

It looks like this can be fixed in ww8par2.cxx's AdjustNewBand by commenting out
 
//aOldBox.SetLine(nullptr, SvxBoxItemLine::RIGHT);

The problem comes from the fact that three cells need to be merged. The first cell has no left border, so I assume that it just uses that for the newly merged cell.

I have no idea of the implications of not removing the right line are - either for import or for export, especially since there were no unit test failures...
Comment 17 Justin L 2020-04-20 17:08:34 UTC
The openoffice bug report isn't helpful in finding the code change.
https://bz.apache.org/ooo/show_bug.cgi?id=18128
Comment 18 Justin L 2020-04-28 13:07:49 UTC
(In reply to Justin L from comment #16)
> // #i18128# word has only one line between adjoining vertical cells
> // we have to mimic this in the filter by picking the larger of the
> // sides and using that one on one side of the line (right)
It seems completely unnecessary to do this here, because "merge adjacent line styles" does exactly that.

proposed fix at https://gerrit.libreoffice.org/c/core/+/9306
Comment 19 Commit Notification 2020-05-19 19:22:20 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/76356814075ddc4323f356cf99dcc5a7bbc8f0e4

tdf#60378 doc import: merged cells - don't null right border

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.